# libup-test-fail

./: .gitignore  README.org  findcli.py
codeql/: apiusage.ql  datadp.ql
cslicer-configs/: java-driver.properties  openscoring.properties
db.apiusage/: apollo.properties  apollo.slf4j  apollo.slf4j.api  languagetool.properties  languagetool.slf4j  languagetool.slf4j.api  light-4j.jackson  light-4j.jackson.api  light-4j.properties  rest-assured.jackson  rest-assured.jackson.api  rest-assured.properties  shiro.properties  shiro.slf4j  shiro.slf4j.api  zipkin.properties  zipkin.slf4j  zipkin.slf4j.api
db.cases/: 2021-04-07.csv  pairs.toml  (+3 more)
depgraph/: .gitignore  Cargo.toml  README.org  run.sh
depgraph/data/: dependency-graph-added.dot  docker-java-pom.json  openscoring-result.csv
depgraph/data/SARIF/fastjson/: param.sarif  receiver.sarif
depgraph/data/facts/: JarContainClass.facts  Reference.facts
depgraph/data/facts/docker-java/: clmap.facts
depgraph/data/for-tests/: incompat-pairs-one.json
depgraph/datalog/: api-usage-restrict.dl  api-usage.dl  def-basic-dep.dl  defs.dl  find-origin.dl  simple-dataflow.dl  types.dl
depgraph/datalog/deprecated/: find-origin.dl
depgraph/scripts/: dl_all.sh  dl_all_sources.sh  find_usage_instance.sh  rm404.sh  run.sh
depgraph/scripts/rewrite/: no-junit.sh
depgraph/src/: api_usage.rs  dataflow.rs  dl_relation.rs  dot_graph.rs  jar_class_map.rs  lib.rs  main.rs  mvn_reactor.rs  pomdep.rs
depgraph/src/sarif/: sarif.rs
depgraph/src/utils/: dl_utils.rs  err.rs  existing_data_utils.rs  mvn_repo_util.rs  utils.rs
(+52 files in other folders)
