[package]
name = "depgraph"
version = "0.1.0"
authors = ["Xiuheng <wxhbuaa@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.1"
log = "0.4.0"
env_logger = "0.8.2"