[package]
name = "depgraph"
version = "0.1.0"
authors = ["Xiuheng <wxhbuaa@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.1.6"
walkdir = "2"
log = "0.4.0"
env_logger = "0.8.2"
clap = "3.0.0-beta.2"
dot = "0.1.4"
git2 = "0.13"
dirs = "3.0.1"
url = "2.2.2"
reqwest = "0.11"
tokio = { version = "1.9.0", features = ["full"] }


[[bin]]
name = "depgraph"
path = "src/main.rs"

